fix profile card not visible

--- a/styles.css
+++ b/styles.css
@@ -1020,7 +1020,7 @@ img {
   }
 }
 
-.cardd {
+.profile-section {
   width: 300px;
   height: 350px;
   border-radius: 2em;
@@ -1067,7 +1067,7 @@ img {
                    -3px -3px 15px rgb(58, 58, 58);
 }
 
-.cardd a {
+.profile-section a {
   transition: 0.4s;
   color: white
 }
